Correct error in view