@@ -39,36 +39,65 @@ public class ProductController {
 		Product product =new Product();
 		return new ModelAndView("prod_reg","product",product);
 	}
+	
+	@RequestMapping(value="preUpdate" ,method=RequestMethod.GET)
+	public String updateForm() {
+		System.out.println("I'm in preUpdate");
+		return "prod_update_form";
+	}
+	
+	@RequestMapping(value="preDelete" ,method=RequestMethod.GET)
+	public String deleteForm() {
+		return "prod_delete_form";
+	}
 	@RequestMapping(value="/register" ,method=RequestMethod.POST)
 	public ModelAndView addProduct( @ModelAttribute(value="product")Product product) {
 		productService.createProduct(product);
 		return new ModelAndView("prod_status","message","Product Added");
 	}
 
-	@RequestMapping(value="preget" ,method=RequestMethod.GET)
-	public String getCustomerIdForm() {		
-		return"get_customer_id";
-	}
-
-	@RequestMapping(value="/allp", method=RequestMethod.GET)
-	public ModelAndView getAllCustomerDetails() {
+	@RequestMapping(value="/allproducts", method=RequestMethod.GET)
+	public ModelAndView getAllProductDetails() {
 		List<Product> productList=productService.getAllProducts();
 		if(productList.size()!=0) {				
 			return new ModelAndView("all_products","productList",productList);
 		}else {
-			return new ModelAndView("prod_status","message","All products retrieved");
+			return new ModelAndView("prod_status","message","No products retrieved");
 		}
 
 	}
 
 
-
+	@RequestMapping(value="/preeditp", method=RequestMethod.GET)
+	public ModelAndView preUpdateProduct(@RequestParam(value="productid") String productid) {
+		try {
+			Long id=Long.valueOf(productid);
+			Product product=productService.getProductById(id);
+			return new ModelAndView("update_product","product",product);
+		}catch(Exception e) {
+			return new ModelAndView("status","message",e.getMessage());
+		}
+	}
+	
+	@RequestMapping(value="/posteditp", method=RequestMethod.POST)
+	public ModelAndView postUpdateCustomer(@ModelAttribute(value="product") Product product) {
+			productService.updateProduct(product.getProduct_id(), product);
+			return new ModelAndView("prod_status","message","Product Successfully Updated");
+	}
+	
 	@RequestMapping(value="/deletep", method=RequestMethod.GET)
 	public ModelAndView deleteProduct(@RequestParam(value="productid") String productid) {
-		int id=Integer.parseInt(productid);
-		productService.deleteProduct(new Integer(id));
+		productService.deleteProduct(Long.valueOf(productid));
 		return new ModelAndView("prod_status","message","Deleted Product");
 
 	}
-
+	
+	@RequestMapping(value="/pmenu")
+	public String getCustomerMenu() {
+		return "product_menu";
+	}
+	@RequestMapping("/mmenu")
+	public String goToMainMenu() {
+		return "main_menu";
+	}
 }
